[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/graphic/bg.png" type="Texture" id=1]
[ext_resource path="res://src/Game Elements/MenuGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://src/font/authorFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/graphic/player.png" type="Texture" id=5]
[ext_resource path="res://src/font/fontSmall.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/graphic/x.png" type="Texture" id=7]
[ext_resource path="res://assets/graphic/check.png" type="Texture" id=8]
[ext_resource path="res://assets/graphic/Credits.png" type="Texture" id=9]
[ext_resource path="res://assets/graphic/popupBG.png" type="Texture" id=10]

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 552, 962 )
scale = Vector2( 2, 1 )
z_index = -100
z_as_relative = false
texture = ExtResource( 1 )

[node name="MenuGUI" parent="." instance=ExtResource( 2 )]

[node name="player" type="Sprite" parent="."]
position = Vector2( 540, 960 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="Menu"]
margin_left = 860.0
margin_top = 1844.0
margin_right = 1060.0
margin_bottom = 1904.0
custom_fonts/font = ExtResource( 4 )
text = "By Nyjako"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles" type="CheckBox" parent="Menu"]
margin_right = 313.0
margin_bottom = 108.0
custom_icons/checked = ExtResource( 8 )
custom_icons/unchecked = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "Particles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="CheckBox" parent="Menu"]
margin_top = 108.0
margin_right = 313.0
margin_bottom = 216.0
custom_icons/checked = ExtResource( 8 )
custom_icons/unchecked = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "Sounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TouchScreenButton" parent="."]
position = Vector2( 707, 0 )
normal = ExtResource( 9 )

[node name="Credits" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="Popup" parent="Credits"]
anchor_left = 0.5
anchor_right = 26.5
anchor_bottom = 7.05
margin_left = -20.0
margin_top = 2.0
margin_right = 19.9999
margin_bottom = 173.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="Credits/PopupDialog"]
modulate = Color( 1, 1, 1, 0.792157 )
position = Vector2( 549, 224 )
scale = Vector2( 0.866, 0.413 )
texture = ExtResource( 10 )

[node name="Author" type="Label" parent="Credits/PopupDialog"]
margin_left = 17.0
margin_top = 35.0
margin_right = 1057.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 4 )
text = "Game by Nyjako"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Font1" type="Label" parent="Credits/PopupDialog"]
margin_left = 17.0
margin_top = 216.0
margin_right = 1057.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 4 )
text = "Reenie Benie Font by James Grieshaber"
align = 1

[node name="Font2" type="Label" parent="Credits/PopupDialog"]
margin_left = 17.0
margin_top = 316.0
margin_right = 1057.0
margin_bottom = 375.0
custom_fonts/font = ExtResource( 6 )
text = "Nova Square Font by wmk69"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Godot" type="Label" parent="Credits/PopupDialog"]
margin_left = 146.0
margin_top = 125.0
margin_right = 760.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 6 )
text = "Achived with Godot Engine"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="License" type="Button" parent="Credits/PopupDialog/Godot"]
margin_left = 626.0
margin_right = 808.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 4 )
text = "License"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Menu/Particles" to="." method="_on_Particles_toggled"]
[connection signal="toggled" from="Menu/Sounds" to="." method="_on_Sounds_toggled"]
[connection signal="released" from="CreditsButton" to="." method="_on_CreditsButton_released"]
[connection signal="button_down" from="Credits/PopupDialog/Godot/License" to="." method="_on_Licence_button_down"]
